Fixed and checked correctness of local PICSS test; Replaced deprecated method newInstance